Fixed overflow styling

--- a/src/app/spotify-search/spotify-search.component.scss
+++ b/src/app/spotify-search/spotify-search.component.scss
@@ -1,6 +1,6 @@
 input {
   width: 150px;
-  height: 60px;
+  height: 40px;
   border-radius: 6px;
   font-size: 28px;
   padding: 0 15px;
